2009-02-09  Josh Stone  <jistone@redhat.com>

	* process.stp (process.create): Read the task pid *after*
	the task pointer is checked for errors.

2009-02-04  K Prasad  <prasad@linux.vnet.ibm.com>

	PR 7030.
	* signal.stp: handle functions inlined in 2.6.27+

2009-02-03  Frank Ch. Eigler  <fche@elastic.org>

	PR 6961/9810.
	* context-unwind.stp (print_backtrace, backtrace): Revert.

2009-01-06  Frank Ch. Eigler  <fche@elastic.org>

	PR 9699.
	* context.stp, task.stp: Adapt to STAPCONF_TASK_UID.

2008-12-09  Frank Ch. Eigler  <fche@elastic.org>

	PR 6961.
	* context-unwind.stp (print_backtrace, backtrace): WARN_ON !regs.

2008-11-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 6965.
	* context-{symbols,unwind}.h: Tweak control symbols to
	STP_NEED_{SYMBOL,UNWIND}_DATA.

2008-11-28  Elliott Baron  <ebaron@redhat.com>

	PR 6965.
	* tapsets/context.stp: moved functions requiring symbols
	to tapsets/context-symbols.stp and those requiring both
	symbols and unwinder to tapsets/context-unwind.stp.
	* tapsets/context-symbols.h: New file.
	* tapsets/context-unwind.h: New file.

2008-11-26  Will Cohen <wcohen@redhat.com>

	* scsi.stp: Add kernel-doc notation.
	
2008-11-26  Will Cohen <wcohen@redhat.com>

	* process.stp: Add kernel-doc notation.
	
2008-11-25  Will Cohen <wcohen@redhat.com>

	* ioscheduler.stp:
	* socket.stp:
	* tcp.stp:
	* udp.stp: Add kernel-doc notation.
	
2008-11-24  Will Cohen <wcohen@redhat.com>

	* context.stp:
	* memory.stp:
	* networking.stp:
	* timestamp.stp: Change to use kernel-doc notation.
	
2008-11-19  Jim Keniston <jkenisto@us.ibm.com>

	* s390x/registers.stp: Fixed typo.

2008-11-19  Ananth Mavinakayanahalli <ananth@us.ibm.com> and Jim Keniston <jkenisto@us.ibm.com>

	* s390x/registers.stp: Added

2008-11-13  William Cohen  <wcohen@redhat.com>

	* networking.stp: Order entries in table.

2008-11-13  William Cohen  <wcohen@redhat.com>
	
	* memory.stp: Add xml documentation.

2008-11-12  William Cohen  <wcohen@redhat.com>
