@@ -111,6 +111,18 @@ keywords: memory
   counts (-m), or exclude certain stack traces (-e).
 
 
+memory/pfaults.stp - Generate Log of Major and Minor Page Faults
+keywords: memory
+
+  The pfaults.stp script generates a simple log for each major and
+  minor page fault that occurs on the system. Each line contains a
+  timestamp (in microseconds) when the page fault servicing was
+  completed, the pid of the process, the address of the page fault, the
+  type of access (read or write), the type of fault (major or minor),
+  and the elapsed time for page fault. This log can be examined to
+  determine where the page faults are occuring.
+
+
 network/nettop.stp - Periodic Listing of Processes Using Network Interfaces
 keywords: network traffic per-process
 
